--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "env-cmd": "^10.1.0",
     "eslint-import-resolver-typescript": "^3.4.0",
     "react": "^18.2.0",
@@ -22,10 +23,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "env-cmd -f .env.development react-scripts start",
+    "start": "react-scripts start",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
     "lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix",
-    "dev": "env-cmd -f .env.development react-scripts start",
-    "start:prod": "env-cmd -f .env.production react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
